--- a/css/style.css
+++ b/css/style.css
@@ -850,7 +850,7 @@ section#attorney {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   background-color: #f8f8f9;
-  padding: 40px 300px;
+  padding: 40px 150px;
 }
 section#attorney h2 {
   color: #000000;
@@ -869,18 +869,19 @@ section#attorney .content {
   margin-top: 30px !important;
 }
 section#attorney .content figure {
+  background-color: transparent;
   border-radius: 2px;
   width: 200px;
   margin-bottom: 0;
-  box-shadow: -2px 2px 10px rgba(0, 0, 0, 0.5);
   margin-right: 40px;
   overflow: hidden;
 }
 section#attorney .content figure img {
+  box-shadow: -2px 2px 10px rgba(0, 0, 0, 0.5);
   width: 200px;
 }
 section#attorney .content .text {
-  width: 85%;
+  width: 60%;
 }
 section#attorney .content .text p {
   color: #868d92;
