--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ html, body {
   margin: 0;
 }
 
+p {
+  font-size: 14px !important;
+}
+
 svg#donut-chart {
   display: block;
   margin: 0 0 0 auto;
@@ -832,7 +836,7 @@ section#about h2 {
 }
 section#about p {
   text-align: center;
-  font-size: 18px;
+  font-size: 16px;
   font-family: "OpenSans-Light", sans-serif;
   font-weight: lighter;
   color: #ffffff;
@@ -885,8 +889,8 @@ section#attorney .content .text {
 }
 section#attorney .content .text p {
   color: #868d92;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 14px;
+  line-height: 20px;
   margin-bottom: 0;
   font-family: "OpenSans-Regular", sans-serif;
 }
@@ -936,6 +940,10 @@ main section#contact .content .text > a:last-child {
   color: #ffffff;
   padding: 10px 80px;
   font-size: 20px;
+}
+main section#contact .content .text > a:last-child:hover {
+  cursor: pointer;
+  background-color: #00cc61;
 }
 
 main section#cases {
