--- a/css/review.css
+++ b/css/review.css
@@ -18,6 +18,41 @@
   font-family: "OpenSans-SemiBold";
   src: url("../assets/fonts/OpenSans-SemiBold.ttf") format("ttf");
 }
+@keyframes showKey {
+  0% {
+    margin-top: 0;
+    margin-bottom: -350px;
+    display: block;
+  }
+  100% {
+    margin-top: 25px;
+    margin-bottom: 0;
+    display: block;
+  }
+}
+@keyframes hideKey {
+  0% {
+    margin-top: 25px;
+    margin-bottom: 0;
+    height: auto;
+  }
+  100% {
+    margin-top: 0;
+    margin-bottom: -350px;
+    height: 0;
+  }
+}
+.showKey {
+  margin-top: 25px;
+  animation: showKey 0.5s linear !important;
+  margin-bottom: 0 !important;
+  height: auto !important;
+}
+
+.hideKey {
+  animation: hideKey 0.5s linear !important;
+}
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -341,6 +376,7 @@ header > div:last-child h1 {
   width: 100% !important;
 }
 #content .container .row .col-md-7 .optional {
+  border-bottom: 1px solid #e8ebea;
   padding: 35px 0;
 }
 #content .container .row .col-md-7 .optional h3:first-child {
@@ -374,6 +410,93 @@ header > div:last-child h1 {
 #content .container .row .col-md-7 .optional ul li .stars i:hover, #content .container .row .col-md-7 .optional ul li .stars i:hover ~ i {
   color: #ffd500 !important;
   cursor: pointer !important;
+}
+#content .container .row .col-md-7 .cost {
+  padding: 20px 0;
+  border-bottom: 1px solid #e8ebea;
+}
+#content .container .row .col-md-7 .cost h3 {
+  font-style: italic;
+  font-size: 14px !important;
+  margin-bottom: 10px;
+}
+#content .container .row .col-md-7 .cost h3:first-child {
+  font-style: normal;
+  font-size: 16px !important;
+  margin-bottom: 10px;
+}
+#content .container .row .col-md-7 .cost .custom_select {
+  width: 65%;
+}
+#content .container .row .col-md-7 .cost .custom_select label {
+  width: 100%;
+}
+#content .container .row .col-md-7 .feedback {
+  padding: 20px 0;
+  border-bottom: 1px solid #e8ebea;
+}
+#content .container .row .col-md-7 .feedback h3 {
+  margin-bottom: 10px;
+}
+#content .container .row .col-md-7 .feedback h3:nth-child(3) {
+  margin-bottom: 3px;
+}
+#content .container .row .col-md-7 .submit {
+  padding: 20px 0;
+  border-bottom: 1px solid #e8ebea;
+}
+#content .container .row .col-md-7 .submit h3 {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+#content .container .row .col-md-7 .submit .checkbox-wrapper {
+  padding-left: 45px;
+  overflow: hidden;
+  position: relative;
+  font-size: 16px;
+  line-height: 24px;
+}
+#content .container .row .col-md-7 .submit .checkbox-wrapper input[type=checkbox]:not(#show):checked ~ em {
+  color: #444;
+}
+#content .container .row .col-md-7 .submit .checkbox-wrapper .content-integrity {
+  margin-top: 25px;
+  z-index: 9;
+  position: relative;
+  margin-bottom: -350px;
+  height: 0;
+}
+#content .container .row .col-md-7 .submit .checkbox-wrapper .content-integrity a {
+  color: #00a971;
+}
+#content .container .row .col-md-7 .submit .checkbox-wrapper em, #content .container .row .col-md-7 .submit .checkbox-wrapper input {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  height: 18px;
+  width: 18px;
+  line-height: 18;
+  font-size: 14px;
+  color: #ffffff;
+  left: 0;
+  background: #eaeaea;
+}
+#content .container .row .col-md-7 .submit .checkbox-wrapper span {
+  background-color: #ffffff;
+  position: relative;
+  z-index: 10;
+  display: inline-block;
+  vertical-align: middle;
+}
+#content .container .row .col-md-7 .submit .checkbox-wrapper span label {
+  cursor: pointer;
+}
+#content .container .row .col-md-7 .submit .checkbox-wrapper .terms-social-media {
+  font-size: 16px;
+  line-height: 24px;
+  margin-top: 30px;
 }
 #content .container .row .col-md-4 h3 {
   font-size: 20px;
