--- a/css/review.css
+++ b/css/review.css
@@ -470,6 +470,7 @@ header > div:last-child h1 {
   color: #00a971;
 }
 #content .container .row .col-md-7 .submit .checkbox-wrapper em, #content .container .row .col-md-7 .submit .checkbox-wrapper input {
+  transition: all 0.2s linear;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -478,7 +479,7 @@ header > div:last-child h1 {
   height: 18px;
   width: 18px;
   line-height: 18;
-  font-size: 14px;
+  font-size: 12px;
   color: #ffffff;
   left: 0;
   background: #eaeaea;
