--- a/css/review.css
+++ b/css/review.css
@@ -426,10 +426,10 @@ header > div:last-child h1 {
   margin-bottom: 10px;
 }
 #content .container .row .col-md-7 .cost .custom_select {
-  width: 65%;
-}
-#content .container .row .col-md-7 .cost .custom_select label {
   width: 100%;
+}
+#content .container .row .col-md-7 .cost .custom_select > label {
+  width: 70%;
 }
 #content .container .row .col-md-7 .feedback {
   padding: 20px 0;
