--- a/css/review.css
+++ b/css/review.css
@@ -694,7 +694,7 @@ footer .footer-copy .footer-logo {
   display: block;
   width: 251px;
   height: 41px;
-  background: url("../assets/img/logo.png") no-repeat;
+  background: url("../assets/profile/img/logo.png") no-repeat;
   margin-bottom: 10px;
 }
 footer .footer-copy .footer-rs-site-links {
