--- a/css/toolbox.css
+++ b/css/toolbox.css
@@ -86,6 +86,11 @@ header nav a:last-child {
   padding: 20px 0;
   font-family: lato, sans-serif;
 }
+@media screen and (max-width: 768px) {
+  .main-content #dashboard {
+    display: none;
+  }
+}
 .main-content #dashboard .db-menu .arrow {
   list-style: none;
   margin: 0;
@@ -141,8 +146,13 @@ header nav a:last-child {
   background: #fff;
   height: auto;
   margin-left: 260px;
-  min-height: 1000px;
   padding: 30px;
+}
+@media screen and (max-width: 768px) {
+  .main-content #content {
+    margin-left: 0 !important;
+    width: 100% !important;
+  }
 }
 .main-content #content .row {
   padding: 0;
@@ -194,11 +204,22 @@ header nav a:last-child {
   justify-content: center;
   align-items: center;
 }
+@media screen and (max-width: 768px) {
+  .main-content #content .row .col-12 .block .col-md-4 .base {
+    margin-right: 0;
+  }
+}
 .main-content #content .row .col-12 .block .col-md-4 .base img {
   width: 100%;
 }
 .main-content #content .row .col-12 .block .col-md-8 {
   border-left: 2px dotted #d0d0d0;
+}
+@media screen and (max-width: 768px) {
+  .main-content #content .row .col-12 .block .col-md-8 {
+    padding-top: 20px;
+    border-left: 0;
+  }
 }
 .main-content #content .row .col-12 .block .col-md-8 h3 {
   margin-left: 40px;
@@ -206,6 +227,11 @@ header nav a:last-child {
   font-family: lato, sans-serif;
   font-weight: normal;
   margin-bottom: 15px;
+}
+@media screen and (max-width: 768px) {
+  .main-content #content .row .col-12 .block .col-md-8 h3 {
+    margin-left: 0;
+  }
 }
 .main-content #content .row .col-12 .block .col-md-8 h2 {
   font-size: 20px;
@@ -216,12 +242,22 @@ header nav a:last-child {
   margin-bottom: 10px;
   padding: 0;
 }
+@media screen and (max-width: 768px) {
+  .main-content #content .row .col-12 .block .col-md-8 h2 {
+    margin-left: 0;
+  }
+}
 .main-content #content .row .col-12 .block .col-md-8 p {
   margin-left: 40px;
   font-size: 14px !important;
   line-height: 24px !important;
   color: #333333 !important;
   font-family: lato, sans-serif !important;
+}
+@media screen and (max-width: 768px) {
+  .main-content #content .row .col-12 .block .col-md-8 p {
+    margin-left: 0;
+  }
 }
 .main-content #content .row .col-12 .block .col-md-8 label {
   margin-left: 40px;
@@ -232,6 +268,11 @@ header nav a:last-child {
   background-color: #00af54;
   padding: 10px 30px;
   cursor: pointer;
+}
+@media screen and (max-width: 768px) {
+  .main-content #content .row .col-12 .block .col-md-8 label {
+    margin-left: 0;
+  }
 }
 .main-content #content .row .col-12 .block .col-md-8 label:hover {
   filter: brightness(1.1);
