--- a/css/greenbar.css
+++ b/css/greenbar.css
@@ -72,6 +72,7 @@ p {
   margin-bottom: 15px;
 }
 .green-bar .base {
+  margin: 0;
   padding: 15px 20px;
   border-radius: 3px;
   width: 100%;
@@ -93,6 +94,7 @@ p {
   margin-bottom: 5px;
 }
 .green-bar .base .col-md-8 .bar {
+  width: 100%;
   position: relative;
   display: flex;
   padding: 5px 30px;
