--- a/css/greenbar.css
+++ b/css/greenbar.css
@@ -78,6 +78,9 @@ p {
   width: 100%;
   background-color: #ffffff;
 }
+.green-bar .base .col-md-4 {
+  padding-right: 35px;
+}
 .green-bar .base .col-md-4 .value {
   border: 3px solid #eff7f4;
   padding: 20px 15px;
@@ -86,6 +89,7 @@ p {
   color: #7ea797;
 }
 .green-bar .base .col-md-8 {
+  padding-left: 35px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -117,7 +121,7 @@ p {
   border: 2px solid #e2e2e2;
   border-radius: 5px;
   position: absolute;
-  padding: 2.5px 10px;
+  padding: 2.5px 8px;
   top: -30px;
 }
 .green-bar .base .col-md-8 .bar .float-block:hover {
